manifests/base/email/istio/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: emailservice
  namespace: emailservice
spec:
  hosts:
    - emailservice.emailservice.svc.cluster.local
  http:
    - route:
        - destination:
            host: emailservice.emailservice.svc.cluster.local
            subset: v1
          weight: 90
        - destination:
            host: emailservice.emailservice.svc.cluster.local
            subset: v2
          weight: 10
